org.mmisw.ontmd: Ontology Metadata Manager and Voc2RDF
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-04-11, 13  (1.2.0.beta3)
	Issue #116: editing interface in the table is not functional
		- various changes including textbox in each field and navigation with keyboard
		- enter key enables cell for editing; enter typed again returns to navigation
		- first column and first row are made visible if the current focused cell is close
		  enough.
	Note: Some other improvements are of course possible; but any more sophisticated 
	      spreadsheet-like interface would require some significant effort. 
	      
	Fixed issue #115: "Allow tab delimiter when importing data in voc2rdf"
		Now, two buttons are included, both with options to select the desired separator: 
			- "Import" allows to enter terms from a CSV formatted text: the user specifies what
			  character should be interpreted as the field separator
			- "Export" displays the current table in CSV format (for the user to copy-n-paste somewhere);
			  the user indicates the desired separator character.
		- the following separators are possible: comma (,), sem-colon (;), tab, and pipe (|)
		
	Fixed #118: "Difficult to fix errors reported by voc2rdf"
		 Yes, this is difficult in the popup itself.
		 Fix: just let the table be updated; then the user can continue editing; the system
		 will make the error checking when attempting the "Convert to RDF action", anyway.
	
		
2009-04-07
	Implemented issue #84: "allow user-given namespace (URI) in voc2rdf"
	VocabPanel.OntologyUriPanel handles the information about the resulting URI for the ontology.
	The user can now specify the complete URI and later, if desired, revert to the automated 
	handling.

2009-04-07
	Fixed issue #120: "title doesn't get carried forward"
	Problem was that Omv.name was assigned BOTH the class name and the fulltitle.
	Only the fullTitle is now assigned.
	
2009-04-06
	Fixed issue #119: "Allow empty fields in non-required columns"